feat: update SonarQube configuration and environment settings for improved analysis

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,8 +6,8 @@
   "service": "devcontainer",
   "runServices": [
     "devcontainer"
-    ,"sonar"
-    // ,"jenkins"
+    // ,"sonar"
+    ,"jenkins"
     // ,"nexus"
   ],
   "workspaceFolder": "/workspace",
