--- a/.env.cicd
+++ b/.env.cicd
@@ -3,6 +3,7 @@
 # - SONAR_HOST_URL (Sunucu adresi)
 # - SONAR_LOGIN veya SONAR_TOKEN (Kimlik doğrulama)
 
-SONAR_TOKEN=squ_78d862e6703bea2e50eb44c0cc97016a1920f4d3
-SONAR_HOST_URL=http://sonar:9000
+SONAR_TOKEN=sqa_ec28c9014661757eab41f0ddb9c58e682112d256
+SONAR_HOST_URL=https://sonar.telenity.com
+# SONAR_HOST_URL=http://sonar:9000
 # admin > SONAR_TOKEN=squ_96365c7d897773fa362cec6a7adba617b49ed92a
