--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,27 +9,6 @@
 # ------------------------------------------------------------------------
 
 
-# ------------------------ sonar.host.url --------------------------------
-# SonarQube sunucusunun URL'sidir.
-# Projenizin analiz edilmesi işini hangi Sonarqube sunucusunda yapacağını belirtir.
-# CI/CD pipeline'ınızda SonarQube Jenkins eklentisi, sunucu URL'sini 
-# SONAR_HOST_URL ortam değişkeniniyle sonar-scanner'ın çalışacağı terminale enjekte eder.
-# Eğer bu dosyayı bir CI/CD pipeline'ında kullanıyorsanız, bu satırı yorum satırı haline getirin.
-# ------------------------------------------------------------------------
-# sonar.host.url=http://host.docker.internal:34000
-
-
-# --------------------- SonarQube Project Key and Name -------------------
-# projectKey ve projectName, SonarQube'da projenizi tanımlayan iki önemli özelliktir.
-# projectKey, projenizin benzersiz anahtarıdır ve SonarQube'da projenizi tanımlamak için kullanılır.
-# projectName ise SonarQube web arayüzünde görünen, projenizin adıdır.
-# projectKey ve projectName değerlerini girerseniz, SonarQube web uygulamasında projeniz bu anahtar ve ad ile listelenir.
-# projectName veya projectKey boş bırakılırsa package.json içindeki name alanında belirtilen değer kullanılır.
-# ------------------------------------------------------------------------
-sonar.projectKey=react-diff
-sonar.projectName=react app project
-
-
 # --------------------- SonarQube Token ----------------------------------
 # SonarQube'da projenizi analiz etmek için bir token oluşturmanız gerekmektedir.
 # Bu token, projenizin SonarQube'da analiz edilmesi için gerekli olan kimlik doğrulama bilgilerini içerir.
@@ -49,8 +28,27 @@ sonar.projectName=react app project
 # arm işlemci mimarisinde sonarqube:community sürümü çalışmadığı için
 # docker-compose.yml dosyasında sonarqube:community yerine sonarqube:9-community kullanılmıştır.
 # Bu sürümde sonar.login bilgisi kullanılmamakta olduğu için aşağıdaki satır aktif edilmiştir.
-sonar.login=squ_78d862e6703bea2e50eb44c0cc97016a1920f4d3
-# sonar.login=sqp_3eab7ecc7135a46d23138ac653d505f7912eb1e1
+sonar.login=sqb_4a750ef807498293cd4d502ce8182c7eca1e194c
+
+# ------------------------ sonar.host.url --------------------------------
+# SonarQube sunucusunun URL'sidir.
+# Projenizin analiz edilmesi işini hangi Sonarqube sunucusunda yapacağını belirtir.
+# CI/CD pipeline'ınızda SonarQube Jenkins eklentisi, sunucu URL'sini 
+# SONAR_HOST_URL ortam değişkeniniyle sonar-scanner'ın çalışacağı terminale enjekte eder.
+# Eğer bu dosyayı bir CI/CD pipeline'ında kullanıyorsanız, bu satırı yorum satırı haline getirin.
+# ------------------------------------------------------------------------
+sonar.host.url=https://sonar.telenity.com
+
+
+# --------------------- SonarQube Project Key and Name -------------------
+# projectKey ve projectName, SonarQube'da projenizi tanımlayan iki önemli özelliktir.
+# projectKey, projenizin benzersiz anahtarıdır ve SonarQube'da projenizi tanımlamak için kullanılır.
+# projectName ise SonarQube web arayüzünde görünen, projenizin adıdır.
+# projectKey ve projectName değerlerini girerseniz, SonarQube web uygulamasında projeniz bu anahtar ve ad ile listelenir.
+# projectName veya projectKey boş bırakılırsa package.json içindeki name alanında belirtilen değer kullanılır.
+# ------------------------------------------------------------------------
+sonar.projectKey=React-Admin-Portal
+sonar.projectName=react app project
 
 
 # --------------------- SonarQube Project Version --------------------------
